tests/security/taintThroughDictMap/output.txt
ERROR: TaintedData - input.hack:16:14 - Data from a URL query string found its way to an HTML tag using path $_GET --ExpressionFetch(ArrayValue, "bad")--> $_GET['bad'] (input.hack:11:24) --ExpressionAssignment(ArrayValue, "a")--> array[a] (input.hack:11:24) --Default--> $bad (input.hack:11:5) --Default--> call to foo (input.hack:13:16) --Default--> foo#1 (input.hack:1:35) --Default--> $v (input.hack:4:10) --Default--> composition (input.hack:5:20) --Default--> foo() (input.hack:1:43) --Default--> $bad (input.hack:13:5) --UnknownExpressionFetch(ArrayValue)--> arrayvalue-fetch (input.hack:15:14) --Default--> $bad_value (input.hack:15:22) --Default--> call to echo (input.hack:16:14) --Default--> echo#1 (input.hack:16:9)
ERROR: TaintedData - input.hack:16:14 - Data from a URL query string found its way to an HTML tag using path $_GET --ExpressionFetch(ArrayValue, "bad")--> $_GET['bad'] (input.hack:11:24) --ExpressionAssignment(ArrayValue, "a")--> array[a] (input.hack:11:24) --Default--> $bad (input.hack:11:5) --Default--> call to foo (input.hack:13:16) --Default--> foo#1 (input.hack:1:35) --Default--> $dict (input.hack:1:35) --UnknownExpressionFetch(ArrayValue)--> arrayvalue-fetch (input.hack:3:9) --Default--> composition (input.hack:5:20) --Default--> foo() (input.hack:1:43) --Default--> $bad (input.hack:13:5) --UnknownExpressionFetch(ArrayValue)--> arrayvalue-fetch (input.hack:15:14) --Default--> $bad_value (input.hack:15:22) --Default--> call to echo (input.hack:16:14) --Default--> echo#1 (input.hack:16:9)